--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -21,3 +21,13 @@ ul {
 a {
     text-decoration: none;
 }
+
+h1 {
+    font-family: 'Roboto Slab';
+    font-weight: 700;
+    font-size: 4.8em;
+}
+
+h2 {
+    font-family: 'Roboto Slab';
+}
